# skillup-dotacion-laboral

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dotacion-laboral-tecnico.md  dotacion-laboral.md  main.py  pyproject.toml  requirements.txt
config/: clinic_settings.py  restaurant_settings.py  settings.py
data/processed/: model_artifacts.json  model_comparison_metrics.csv  staffing_inference_metrics.json  staffing_inference_predictions.csv
data/raw/: absenteeism.csv  biometrics.csv  data_dictionary.md  employees_from_forms.csv  work_records.csv
data/restaurant/: restaurant_skillup.db
docs/: arquitectura_validada.md  guia_lectura_graficos_shap.md  pipeline_actualizado.md  pipeline_completo_flujos.drawio  supuestos.md  supuestos_v2.md
scripts/: 01_generate_data.py  02_run_etl.py  03_train_model.py  04_full_pipeline.py  05_generate_medical_forms.py  06_extract_medical_forms.py  07_forms_to_etl.py  08_forms_to_model_metrics.py  09_run_inference.py  _03_train_model_loader.py  run_dashboard_ui.py  run_full_pipeline.py  run_pipeline.py
src/clinic/: __init__.py  etl.py  generate.py  inference.py  reporting.py  train.py
src/domains/: __init__.py  base.py  cli.py  clinic.py  industrial.py  registry.py  restaurant.py
src/etl/: extract.py  load.py  pipeline.py  transform.py
src/extraction/: __init__.py  medical_forms.py
src/generators/: absenteeism.py  biometrics.py  employees.py  medical_forms.py  work_records.py
src/models/: balancing.py  evaluate.py  (+5 more)
tests/: test_clinic_domain.py  test_generators.py  test_staffing.py
(+21 files in other folders)
