[project]
name = "skillup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=19.0",
    "imbalanced-learn>=0.11",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.12",
    "streamlit>=1.38",
    "xgboost>=2.0",
]

[tool.pyright]
extraPaths = ["."]
